<!--
  ~ Copyright (c) 2018 Victor Rendina
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">DaggerLifecycle</string>
    <string name="scope_one">Scope One</string>
    <string name="scope_two">Scope Two</string>
    <string name="start">Start</string>
    <string name="dispose">Dispose</string>
    <string name="instructions">Watch the logcat to see when the dependencies call their lifecycle methods.</string>
    <string name="scope_one_notice">Scope One contains a dependency that will intentionally cause a memory leak when the component is disposed.</string>
</resources>
